# grpc-fullstack

./: Cargo.toml  build.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/protos/: calculator.client.ts  calculator.ts
proto/: calculator.proto
src/: main.rs
src/middleware/: logging.rs
src/services/: calculator.rs
