[package]
name = "tonic-grpc-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tonic-web = "0.13.0"
tower = "0.5.2"
tracing-subscriber = "0.3.19"
tonic-middleware = "0.3.0"
log = "0.4.27"
chrono = "0.4.40"
env_logger = "0.11.8"

[build-dependencies]
tonic-build = "*"
